injectable/tests/ui/missing_constructor.stderr
error: cannot find attribute `injectable` in this scope
 --> tests/ui/missing_constructor.rs
  |
  | #[injectable]
  |   ^^^^^^^^^^
  |
  = note: `injectable` is in scope, but it is a crate, not an attribute
